2006-01-26  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* linux/dev/drivers/block/ide.c (read_intr): Set the IRQ handler before
	issuing a request.
	(write_intr): Likewise.
	(multwrite_intr): Likewise.

2006-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/linux/Makefile.in: Automatically recreate the `Makefile'.

2006-01-23  Thomas Schwinge  <tschwinge@gnu.org>

	* i386/linux/configure: Regenerated.

	* i386/linux/configure.ac: Only add a AC_DRIVER_ALIAS if it really is a
	alias.

2006-01-22  Thomas Schwinge  <tschwinge@gnu.org>

	* doc/mach.texi (Configuration): Document the recently added drivers.
	* i386/README-Drivers: Likewise.

	* configure, i386/configure, i386/linux/configure, linux/configure,
	i386/linux/device-drivers.h.in: Regenerated.

	* linux/src/drivers/net/ne2k-pci.c: Resolve conflicts.

2006-01-22  Guillem Jover  <guillem@hadrons.org>

	* i386/linux/configure.ac: Renamed winbond-840 driver to winbond_840.
	Enable the starfire, intel_gige and natsemi network drivers.  Remove
	"CONFIG_" from cb_chim, starfire, sundance, winbond840, hamachi,
	natsemi, myson803 and ns820 driver declarations.  Replace INTER_GIGE
	with INTEL_GIGE.
	* linux/dev/drivers/net/Space.c: Add conditional probes for natsemi,
	ns820, winbond840, hamachi, sundance, starfire, myson803 and intel-gige
	drivers.

	* linux/src/include/asm-i386/cache.h: New file from linux 2.2.26.
	* linux/dev/include/linux/malloc.h: Include <asm/cache.h>.

	* linux/src/drivers/net/ns820.c (netsami_drv_id): Renamed to ...
	(ns820_drv_id): ... this.  Fix all callers.
	* linux/src/drivers/net/intel-gige.c
	(skel_netdev_probe): Renamed to ...
	(igige_probe): ... this.
	* linux/dev/drivers/net/eepro100.c: Remove obsoleted file.
	* linux/src/drivers/net/eepro100.c (pci_id_tbl): Add PCI ID's from
	linux-2.6.14-rc4.

2006-01-22  Alfred M. Szmidt  <ams@gnu.org>

	* i386/linux/configure.ac: Added `pci-scan.o' to the network driver
	class.  (ns820, myson803, sundance, winbond-840, hamachi): New drivers.